k8s/dotnet-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-api
  namespace: dotnet-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-api
  template:
    metadata:
      labels:
        app: dotnet-api
    spec:
      containers:
      - name: dotnet-api
        image: docker.io/library/dotnet-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: middleware-storage
          mountPath: /app/data
          subPath: dotnet-api
      volumes:
      - name: middleware-storage
        persistentVolumeClaim:
          claimName: middleware-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-api-service
  namespace: dotnet-test
spec:
  selector:
    app: dotnet-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dotnet-api-ingress
#   namespace: dotnet-test
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: api.ziyou.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dotnet-api-service
#             port:
#               number: 80
