k8s/oracle.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oracle
  namespace: dotnet-test
spec:
  serviceName: oracle-headless
  replicas: 1
  selector:
    matchLabels:
      app: oracle
  template:
    metadata:
      labels:
        app: oracle
    spec:
      containers:
      - name: oracle
        image: container-registry.oracle.com/database/express:21.3.0-xe
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1521
        - containerPort: 5500
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-headless
  namespace: dotnet-test
spec:
  clusterIP: None
  selector:
    app: oracle
  ports:
    - protocol: TCP
      port: 1521
      targetPort: 1521
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-service
  namespace: dotnet-test
spec:
  selector:
    app: oracle
  ports:
    - protocol: TCP
      port: 1521
      targetPort: 1521
  type: ClusterIP
